fixed menu icon position on mobile

--- a/src/components/topmenu/styles.css
+++ b/src/components/topmenu/styles.css
@@ -41,7 +41,6 @@
   width: 32px;
   height: 32px;
   cursor: pointer;
-  position: fixed;
   margin: inherit;
 }
 
